force-app/main/default/objects/Evaluation_Component__c/Evaluation_Component__c.object-meta.xml
<CustomObject>
    <label>Evaluation Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evaluation Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>