force-app/main/default/objects/Evaluation_Component__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>Evaluation</label>
    <referenceTo>Evaluation__c</referenceTo>
    <relationshipLabel>Evaluation</relationshipLabel>
    <relationshipName>Evaluation_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>