force-app/main/default/objects/Evaluation_Component__c/fields/Image_Path__c.field-meta.xml
<CustomField>
    <fullName>Image_Path__c</fullName>
    <formula>CASE(Type__c,
&apos;Labs/Bloodwork&apos;, &apos;LabResults.png&apos;, 
&apos;Cardiac Clearance&apos;, &apos;HeartEvaluation.png&apos;,
&apos;Psychosocial Evaluation&apos;, &apos;Psyco.png&apos;,
&apos;Palliative Evaluation&apos;, &apos;PallativeEvaluation.png&apos;,
&apos;Financial Evaluation&apos;, &apos;Financial.png&apos;,
&apos;Dental Clearance&apos;, &apos;DentalClearance.png&apos;,
&apos;Cancer Screening&apos;, &apos;CancerScreening.png&apos;,
&apos;Diagnostic Imaging&apos;, &apos;DiagnosticImage.png&apos;,&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Path</label>
    <type>Text</type>
</CustomField>