force-app/main/default/objects/Evaluation_Component__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labs/Bloodwork</fullName>
            </value>
            <value>
                <fullName>Diagnostic Imaging</fullName>
            </value>
            <value>
                <fullName>Cardiac Clearance</fullName>
            </value>
            <value>
                <fullName>Dental Clearance</fullName>
            </value>
            <value>
                <fullName>Psychosocial Evaluation</fullName>
            </value>
            <value>
                <fullName>Palliative Evaluation</fullName>
            </value>
            <value>
                <fullName>Cancer Screening</fullName>
            </value>
            <value>
                <fullName>Financial Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>